--- a/components/self/Cargo.toml
+++ b/components/self/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
+serde_json = { version = "1", default-features = false, features = ["alloc"] }
 
 [lib]
 crate-type = ["cdylib"]
