--- a/components/toolkit/Cargo.toml
+++ b/components/toolkit/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
+serde_json = "1"
 
 [lib]
 crate-type = ["cdylib"]
