--- a/components/core/Cargo.toml
+++ b/components/core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
+wit-bindgen = "0.52.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
@@ -18,8 +18,3 @@ opt-level = "s"
 debug = false
 strip = true
 lto = true
-
-[package.metadata.component]
-package = "asterbot:core"
-
-[package.metadata.component.dependencies]
