--- a/components/toolkit/Cargo.toml
+++ b/components/toolkit/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
+wit-bindgen = "0.52.0"
 serde_json = "1"
 
 [lib]
@@ -17,8 +17,3 @@ opt-level = "s"
 debug = false
 strip = true
 lto = true
-
-[package.metadata.component]
-package = "asterbot:toolkit"
-
-[package.metadata.component.dependencies]
